--- a/FilmProject/Views/Home/Index.cshtml
+++ b/FilmProject/Views/Home/Index.cshtml
@@ -1,31 +1,49 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@model IEnumerable<FilmProject.Models.Film>
+
+@{
+    ViewBag.Title = "Фильмы";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+@using Microsoft.AspNet.Identity;
+
+@if (User.Identity.GetUserId() != null)
+{
+    <p class="newFilm">
+        @Html.ActionLink("Добавить новый фильм", "Create")
+    </p>
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+
+
+<table class="table table-hover">
+@foreach (var item in Model) {
+    <tr>
+        <td>
+            @{
+                string imgSrc = String.Empty;
+                if (item.Picture != null)
+                {
+                    var base64 = Convert.ToBase64String(item.Picture);
+                    imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+                }
+            }
+            <img class="smallImage" src="@imgSrc" />
+        </td>
+
+        <td class="text">
+            <h4>
+                @Html.ActionLink(Html.DisplayFor(modelItem => item.Name).ToString(), "Details", new { id = item.FilmId }) 
+                (@Html.DisplayFor(modelItem => item.Year))
+            </h4>
+
+
+            <span>
+                @Html.DisplayFor(modelItem => item.Description) ...
+            </span>
+        </td>
+
+    </tr>
+}
+
+</table>
